chore(MaterialSearchView): Working on Searcher view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/SplashAppTheme">
+            android:theme="@style/SplashAppTheme"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
